<resources>
    <string name="app_name">Plugged</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_server_uri">wss://reshoe.back4app.io/</string>
    <string name="back4app_app_id">a4ze23YFfl9rOeXU3pYLqCdE2R6D3untEvfPGiGh</string>
    <string name="back4app_client_key">ze9HuslU5D8VZJGim5gQEVwkulbuGiZPawFvikYz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">PostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="post">POST</string>
    <string name="take_picture">Take Picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="buyer">Buyer</string>
    <string name="select_account_type">Select account type:</string>
    <string name="seller">Seller</string>
    <string name="email">Email</string>
    <string name="first_nameAlt">First Name:</string>
    <string name="last_nameAlt">Last Name:</string>
    <string name="emailAlt">Email:</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="message_here">Message here</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
    <string name="user_preferences">User Preferences</string>
    <string name="account_info">Account Info</string>
    <string name="notifications">Notifications</string>
    <string name="share_location">Share Location</string>
    <string name="title_activity_create_review">CreateReviewActivity</string>
    <string name="enter_description_here">Enter Description Here:</string>
    <string name="price">Price:</string>
    <string name="condition">Condition:</string>
    <string name="enter_listing_price">Enter Listing Price:</string>
    <string name="enter_condition_1_10">Enter Condition:</string>
    <string name="enter_shoe_name">Enter Shoe Name:</string>
    <string name="enter_size">Size:</string>
    <string name="error_saving">Error while saving</string>
    <string name="error_login">Username and password combination is incorrect or does not exist
    </string>
    <string name="men">M</string>
    <string name="women">W</string>
    <string name="size">Size:</string>
    <string name="total_price">Total Price:</string>
    <string name="money">$</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="filters">Filters</string>
    <string name="m_w">M/W:</string>
    <string name="no_items_match_your_search">No items match your search</string>
    <string name="no_posts_liked_yet">No posts liked yet</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="no_reviews_yet_for_this_seller">No reviews yet for this seller</string>

    <string-array name="condition_array">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="size_array">
        <item></item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
        <item>7</item>
        <item>7.5</item>
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
        <item>10</item>
        <item>10.5</item>
        <item>11</item>
        <item>11.5</item>
        <item>12</item>
        <item>12.5</item>
        <item>13</item>
        <item>13.5</item>
        <item>14</item>
        <item>14.5</item>
        <item>15</item>
        <item>15.5</item>
    </string-array>
    <string name="title_activity_edit_description">EditDescription</string>
    <string name="apply">APPLY</string>
    <string name="sold">SOLD</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
    <string name="username1">Username:</string>
    <string name="google_maps_api_key">AIzaSyBwm_shJGDrXbkwZHF8k5wWfa7P1Bm07UU</string>
    <string name="permission">Need Permission</string>
    <string name="description_empty">Description cannot be empty</string>
    <string name="insert_condition">Insert a condition</string>
    <string name="insert_size">Insert a size</string>
    <string name="insert_price">Insert a price</string>
    <string name="no_image">There is no image!</string>
    <string name="valid_condition">Enter a valid condition</string>
    <string name="valid_size">Enter a valid size</string>
    <string name="no_picture">Picture was not taken!</string>
    <string name="no_images">No images were selected!</string>
    <string name="liked">Liked post!</string>
    <string name="already_liked">Already liked!</string>
    <string name="already_cart"> is already in the cart</string>
    <string name="added_cart"> added to cart</string>

</resources>