<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >


    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="346dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        app:srcCompat="@drawable/launcher_foreground"
        tools:srcCompat="@drawable/launcher_foreground" />

    <EditText
        android:id="@+id/etUsernameCreate"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/ivLogo2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:outlineProvider="none"
        />

    <EditText
        android:id="@+id/etPasswordCreate"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/etUsernameCreate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
       />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/etPasswordCreate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_below="@+id/etFirstName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/rgGroup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        />

    <RadioGroup
        android:id="@+id/rgGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rbBuyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/buyer"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:typeface="sans"
            />

        <RadioButton
            android:id="@+id/rbSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/seller"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:typeface="sans"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/select_account_type"
        />

</RelativeLayout>