<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.project.reshoe_fbu.activities.fragments.ProfileFragment"
    >

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        tools:src="@tools:sample/avatars"
        />

    <LinearLayout
        style="@style/Divider.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvAccountInfo"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_below="@+id/ivProfile"
            android:layout_marginTop="0dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/account_info"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvUserPreferences"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="0dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/user_preferences"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textSize="20sp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnChangeProfilePic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/add_profile_pic" />

    <Button
        android:id="@+id/btnChangeDescription"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="171dp"
        android:background="@drawable/edit_text" />

</RelativeLayout>