<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <TextView
        android:id="@+id/tvDetailedPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetailName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/tvPriceDetailed"
        android:textSize="20sp"
        tools:text="$190"
        />

    <TextView
        android:id="@+id/tvDetailName"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_pager"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-55dp"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="YEEZY 350 BOOST"
        />

    <TextView
        android:id="@+id/tvDetailCondition"
        android:layout_width="48dp"
        android:layout_height="34dp"
        android:layout_below="@+id/tvDetailName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/tvConditionDetail"
        android:textSize="20sp"
        tools:text="9/10"
        />

    <ImageButton
        android:id="@+id/ibSellerProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnBackDetailShoe"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        tools:srcCompat="@tools:sample/avatars"
        />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/delete"
        />

    <TextView
        android:id="@+id/tvDetailedDescription"
        android:layout_width="307dp"
        android:layout_height="60dp"
        android:layout_below="@+id/tvDetailedPrice"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="38dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/btnBackDetailShoe"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/back_arrow"
        />

    <TextView
        android:id="@+id/tvDetailSellerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ibSellerProfile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        tools:text='"@David"'
        />

    <TextView
        android:id="@+id/tvPriceDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetailName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/tvConditionDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetailName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tvDetailedPrice"
        android:text="@string/condition"
        />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:layout_below="@+id/tvDetailSellerUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        >

    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetailName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tvDetailCondition"
        android:text="@string/size"
        />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetailName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/textView3"
        android:textSize="20sp"
        tools:text="8.5M"
        />

    <TextView
        android:id="@+id/tvSold"
        android:layout_width="135dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:lineSpacingExtra="20sp"
        android:text="SOLD"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>